@@ -1,0 +1,3 @@
+explain static void operator=(int)
+                  ^
+19: error: operator = must be non-static
