@@ -1,0 +1,1 @@
+declare () as static member operator (int, int) returning void
