@@ -1,0 +1,4 @@
+EXPECTED_EXIT=65
+cdecl -xc++20 <<END
+explain static void operator()(int, int)
+END
